# aesd-weather-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/aesd_weather_app/: main.py
src/aesd_weather_app/observers/: lcd.py  observer.py
src/aesd_weather_app/sensors/: __init__.py  base_sensor.py  humidity_sensor.py  outside_temp.py  temp_sensor.py  wind_sensor.py
tests/: conftest.py
tests/integration_tests/: conftest.py
tests/integration_tests/main_flow/: test_workflow.py
tests/integration_tests/sensors/: test_outside_sensors.py
tests/unit_tests/: conftest.py  test_embedded_sensors.py
