[project]
name = "aesd-weather-app"
version = "0.1.0"
description = "Simple app to read data from a I2C sensor and weather APIs and display to a LCD screen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"requests >= 2.0.0",
]

[dependency-groups]
dev = [
"black",
"flake8",
"mypy",
]
qa = [
"black",
"flake8",
"mypy",
"bandit",
"pre-commit",
]
test = [
"pytest",
"pytest-cov",
]

[tool.pytest]

addopts = ["-vvv", "--cov=src/", "--cov-report=html", ]
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 88

[tool.mypy]
follow_untyped_imports = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
